--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -7,20 +7,22 @@
 main{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     background: hsl(228 39% 23%);
     min-height: 100vh;
     color: rgba(255, 255, 255, 0.7);
     align-items: center;
-    gap: 60px;
+    gap: 10vh;
 }
-
 
 nav{
     display: flex;
     justify-content: space-between;
-    width: 90%;
+    width: 80%;
     padding: 3% 0;
+}
+nav img{
+    width: 10%;
 }
 nav a{
     text-decoration: none;
@@ -34,12 +36,16 @@ nav img{
     gap: 30px;
     width: 80%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     flex-wrap: wrap;
     box-shadow: 1px 1px 40px 0.1px rgba(0, 0, 0, 0.6);
     padding: 50px;
     margin: 0px 0px 70px 0;
     border-radius: 10px;
+}
+.areas h1 {
+    text-align: center;
 }
 
 .cards{
@@ -80,16 +86,6 @@ input{
     background: transparent;
     color: white;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -148,12 +144,6 @@ input:checked + .slide:before {
 .slide.round:before {
     border-radius: 50%;
 }
-
-
-
-
-
-
 
 
 
