--- a/public/css/zona.css
+++ b/public/css/zona.css
@@ -14,21 +14,80 @@ main{
     min-height: 100vh;
     color: rgba(255, 255, 255, 0.7);
     align-items: center;
+    padding-bottom: 90px;
 }
 
 nav{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 90%;
     padding: 3% 0;
+    text-align: center;
 }
 nav a{
     text-decoration: none;
     color: rgba(255, 255, 255, 0.7);
+    font-size: 20px;
 }
 nav img{
     width: 8%;
   }
+  .switchBtn {
+    position: relative;
+    display: inline-block;
+    width: 110px;
+    height: 34px;
+}
+
+.switchBtn input {
+    display: none;
+}
+
+.slide {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 0.4s;
+    padding: 8px;
+    color: #fff;
+}
+
+.slide:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 78px;
+    bottom: 4px;
+    background-color: white;
+    transition: 0.4s;
+}
+
+input:checked + .slide {
+    background-color: #8CE196;
+    padding-left: 40px;
+}
+
+input:focus + .slide {
+    box-shadow: 0 0 1px #01aeed;
+}
+
+input:checked + .slide:before {
+    transform: translateX(26px);
+    left: -20px;
+}
+.slide.round {
+    border-radius: 34px;
+}
+
+.slide.round:before {
+    border-radius: 50%;
+}
 table{
     box-shadow: 0px 0px 20px 0.1px rgba(0, 0, 0, 0.3);
     padding: 30px 40px;
@@ -52,6 +111,11 @@ tbody tr:nth-child(even) {
 
 tbody tr:hover {
     background-color: rgba(255, 255, 255, 0.2);
+}
+h3{
+    margin: 50px 0;
+    text-align: center;
+    margin-right: 10px;
 }
 button{
     padding: 10px 20px;
@@ -144,4 +208,19 @@ button{
 .zonasDiv div{
     display: flex;
     gap: 10px;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+    color: black !important;
+}
+
+input:-moz-autofill,
+input:-moz-autofill:hover,
+input:-moz-autofill:focus,
+input:-moz-autofill:active {
+    -moz-box-shadow: 0 0 0 30px white inset !important;
+    color: black !important;
 }
